--- a/.gitignore
+++ b/.gitignore
@@ -7,21 +7,34 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
 *.local
+
+# Environment variables
+.env
+.env.local
+.env.production.local
+.env.development.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-.env
-*.md
-!README.md
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Package manager locks (optional - uncomment if needed)
+# bun.lockb
+# pnpm-lock.yaml
